--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -33,6 +33,7 @@ jobs:
       # Run android assembleProdDebuggable
       - name: Run Build
         run: |
+          cd sonic-android
           chmod +x gradlew
           ./gradlew assembleDebug
       # Uploads the folder or file in path to GitHub
@@ -40,4 +41,4 @@ jobs:
         uses: actions/upload-artifact@v2
         with:
           name: DebugApp
-          path: sonic-android/build/outputs/apk/debug/app-debug.apk
+          path: sonic-android/sample/build/outputs/apk/debug/
